Changed HP Bar code, now missing HP will slowly reduce instead of disappearing (KH 358/2 days style). Savepoints will now retain their stats when broken. Fixed Creative tabs by using an interface (not proud of it but it works).